Minor edits to document

--- a/BBLReport.Rmd
+++ b/BBLReport.Rmd
@@ -177,7 +177,7 @@ The results were multiplied by 100,000 to provide an appropriate scaling to the 
 
 #### *Size and Age*
 
-A length-frequency histogram of the fish-length data (Figure 3) shows the catch varied by age group. Few small (range 40 to 200 mm) and large (range 320 to 410 mm) fish were caught, but the catch of intermediate-size fish (range 200 to 310 mm) was high. Based on age analysis data from this population, these three length classes correspond to ages 1 through 3, ages 6 and 7, and ages 4 and 5, respectively. Therefore, the majority of the fish caught were between ages 4 and 5.  Very few age 1 fish were caught during this study (Figure 4). This was primarily due to the net mesh size on both the fike nets and hoop traps being too large to capture fish less than 80 mm in length.
+A length-frequency histogram of the fish-length data (Figure 3) shows the catch varied by age group. Few small (range 40 to 200 mm) and large (range 320 to 410 mm) fish were caught, but the catch of intermediate-size fish (range 200 to 310 mm) was high. Based on age analysis data from this population <cite>(Romey 2002)</cite>, these three length classes correspond to ages 1 through 3, ages 6 and 7, and ages 4 and 5, respectively. Therefore, the majority of the fish caught were between ages 4 and 5.  Very few age 1 fish were caught during this study (Figure 4). This was primarily due to the net mesh size on both the fike nets and hoop traps being too large to capture fish less than 80 mm in length.
 
 ```{r plot3_LenghFreq, fig.cap="Length-frequency distribution of rainbow trout in Black Bear lake, July 2002."}
 rbt <- subset(rbt, Length_mm & Recapture == "n")
@@ -218,9 +218,7 @@ subLW <- subset(logLW, Length_mm > 4)
 To better understand the relationship between fish lenght and weight, we transormed the data for a linear comparison (Figure 5, Table 2).  The length-weight relationship was $Log Weight = 2.85 Log Length - 10.64$, and the estimated correlation between weight and length was `r round(cor(subLW$Weight_g, subLW$Length_mm),3)`.  Since the residuals plots are horizontal (not curved or sloped), equal width, and uniformely scattered along the horizontal axis, we concluded that the regression model is a good fit.  The four age-1 fish (49 to 54 mm) from the second sampling event were not included in the length-weight analysis because they skew the correlation for larger fish.
 
 
-\pagebreak
-
-**Table 2.  Linear Model.**
+Table 2.  Linear Model.
 
 ```{r table2_LM, echo=FALSE, results='asis'}
 lmfit <- lm(subLW$Weight_g ~ subLW$Length_mm)
@@ -313,7 +311,7 @@ Another assumption is that all fish have the same probability of capture during 
 
 Consequently, assumptions of the experiment were tested with reduced power and the likelihood of bias. While the direction of the bias in the population estimate is unknown, we felt that a moderate loss of relative precision would not compromise the basic results and implications of this study.
 
-In 2002, Black Bear Lake had the fifth largest (N = `r round((N), 0)`) rainbow trout population on record during the 7 years of monitoring. This is a conservative estimate since fish < 180 mm were not included in the estimate. From our observations it is felt that the true population value probably lies on the upper side of the population estimate, possibly in the region of 1,000 to 1,100 fish.  In addition, the 95% CI for the 2002 estimate was the smallest for all years of monitoring, indicating that a markrecapture study is a reasonable method for comparing population differences among years for fish >180 mm.
+In 2002, Black Bear Lake had the fifth largest (N = `r round((N), 0)`) rainbow trout population on record during the 7 years of monitoring. This is a conservative estimate since fish < 180 mm were not included in the estimate. From our observations it is felt that the true population value probably lies on the upper side of the population estimate, possibly in the region of 1,000 to 1,100 fish.  In addition, the 95% CI for the 2002 estimate was the smallest for all years of monitoring, indicating that a mark-recapture study is a reasonable method for comparing population differences among years for fish >180 mm.
 
 \pagebreak
 
